# roof-backend

./: .env.template  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: main.py
src/api/: api.py
src/api/endpoints/: auth.py
src/configs/: config.py
src/constants/: email_contexts.py  fulfillment.py  group.py  session.py  subscription.py
src/crud/: company.py  session.py  user.py
src/databases/migrations/versions/: 2025_06_04_2207-7c9344068f6f_new_beginning_roof_pro.py
src/models/: __init__.py  company.py  session.py  subscription.py  tariff.py  user.py
src/schemas/: auth.py  company.py  session.py  user.py
src/security/: auth.py  tools.py
src/services/: auth.py
src/utilities/: session.py
